add loght colors

--- a/sass/hassakulab-colors.scss
+++ b/sass/hassakulab-colors.scss
@@ -1,8 +1,10 @@
 @charset "utf-8";
-  
+
+$hassakulab-primary-light: #ffe3a1;
 $hassakulab-primary: #ffc235;
 $hassakulab-primary-dark: #ffa235;
 
+$hassakulab-secondary-light: #dded9d;
 $hassakulab-secondary: #b0d80c;
 $hassakulab-secondary-dark: #719108;
 
